增加多列下拉 单列下拉 日期控件 的双向数据绑定  和 grid的数据源的wz_init_oid
grid的数据源的wz_init_oid  替换了服务器给的did 这样就不必依赖服务器的数据库访问来创建出oid 了
直接依靠前端的oid就可以实现增删改items的记录了
只要是setData进来的数据 一律加oid 不管是不是数据库查的

--- a/web/index.html
+++ b/web/index.html
@@ -161,7 +161,8 @@
 <script src="framwork/whhJsFrame/widgets/whhDatePicker.js"></script>
 <script src="framwork/whhJsFrame/widgets/whhComboBox.js"></script>
 <script src="framwork/whhJsFrame/widgets/whhButton.js"></script>
-
+<script src="framwork/whhJsFrame/widgets/WhhFileUpload.js"></script>
+<script src="framwork/whhJsFrame/widgets/WhhDropDown.js"></script>
 
 <!--UI控件Demo的js -->
 <script src="pages/demoGrid/gridPage1.js"></script>
@@ -169,6 +170,11 @@
 <script src="pages/demoGrid/gridPage4.js"></script>
 <script src="pages/demoDatePicker/datePage1.js"></script>
 <script src="pages/demoComboBox/demo1.js"></script>
+<script src="pages/demoFileUpload/demo.js"></script>
+<script src="pages/demoDropDown/demo1.js"></script>
+
+
+
 
 
 <!-- Message窗口-->
