--- a/web/pages/demoDropDown/demo1.html
+++ b/web/pages/demoDropDown/demo1.html
@@ -1,4 +1,4 @@
-<div class="container-fluid" ng-controller="demo1Ctrl">
+<div class="container-fluid" ng-controller="dropDownDemoCtrl">
 
 
      <div class="row">
@@ -30,23 +30,14 @@
     <div class="row" style="margin-top: 5px;">
         <h6>远程数据 <span style="color: red">{{ifHandler}}</span></h6>
     <div class="col-lg-4" style="padding-left: 0px;padding-right: 0px;">
-        <input  ng-whh-combo-box option="comboBoxOption1" ng-model="comboBox1" style="width: 100%"/>
+        <input  ng-whh-drop-down  option="Option1" ng-model="dropDown1" style="width: 100%"/>
     </div>
         <div class="col-lg-4" style="padding-left: 0px;padding-right: 0px;">
-            <span style="color: red">双向数据绑定 {{comboBox1}}</span>
+            <span style="color: red">双向数据绑定 {{dropDown1}}</span>
         </div>
 
     </div>
-        <div class="row" style="margin-top: 5px;">
-        <h6>本地数据</h6>
-        <div class="col-lg-4" style="padding-left: 0px;padding-right: 0px;">
-            <input  ng-whh-combo-box option="comboBoxOption2" ng-model="comboBox2" style="width: 100%" />
 
-        </div>
-            <div class="col-lg-4" style="padding-left: 0px;padding-right: 0px;">
-                <span style="color: red">双向数据绑定 {{comboBox2}}</span>
-            </div>
-    </div>
     <div class="row">
         <div class="col-lg-12">
             <hr>
