--- a/web/index.html
+++ b/web/index.html
@@ -172,7 +172,7 @@
 <script src="pages/demoComboBox/demo1.js"></script>
 <script src="pages/demoFileUpload/demo.js"></script>
 <script src="pages/demoDropDown/demo1.js"></script>
-
+<script src="pages/demoGrid/gridMaker.js"></script>
 
 
 
