创建GRID构建工具
实现了路由架构,实现了基本的列定义构建 grid属性构建  还实现了页面跳转后缓存回来grid定义相关信息的功能

--- a/web/pages/demoGrid/gridMaker_ColDetail_Date.html
+++ b/web/pages/demoGrid/gridMaker_ColDetail_Date.html
@@ -7,34 +7,35 @@
             <div class="form-group">
                 <div class="checkbox">
                     <label>
-                        <input type="checkbox">可见  <!--  -->
+                        <input type="checkbox" ng-model="tempColDef.wz_hidden">不可见  <!--  -->
                     </label>
                     <label>
-                        <input type="checkbox">可编辑  <!-- editable -->
+                        <input type="checkbox" ng-model="tempColDef.wz_editable">不可编辑  <!-- editable -->
                     </label>
                     <label>
-                        <input type="checkbox">必填<!--validation-->
+                        <input type="checkbox" ng-model="tempColDef.wz_required">必填<!--validation-->
                     </label>
                 </div>
             </div>
         </li>
         <li>
             <div class="form-group">
+                <label for="minDate">最小日期</label>
+                <input class="form-control" id="minDate" ng-whh-date-picker option="MindateOption" ng-model="tempColDefwz_minDate">
+            </div>
+        </li>
+        <li>
+            <div class="form-group">
                 <label for="maxDate">最大日期</label>
-                <input class="form-control" id="maxDate" ng-whh-date-picker option="MaxdateOption">
+                <input class="form-control" id="maxDate" ng-whh-date-picker option="MaxdateOption" ng-model="tempColDefwz_maxDate">
 
             </div>
         </li>
-        <li>
-            <div class="form-group">
-                <label for="minDate">最小日期</label>
-                <input class="form-control" id="minDate" ng-whh-date-picker option="MindateOption">
-            </div>
-        </li>
+
         <li>
             <div class="form-group">
                 <label for="colWidth">宽度</label>
-                <input type="text" class="form-control" id="colWidth" placeholder="宽度">
+                <input type="text" class="form-control" id="colWidth" placeholder="宽度" ng-model="tempColDef.wz_width">
             </div>
         </li>
 
