--- a/web/pages/demoGrid/gridMaker_sub1.html
+++ b/web/pages/demoGrid/gridMaker_sub1.html
@@ -6,8 +6,9 @@
 
         <li>
             <div class="row">
-                <div class="col-md-4"><input class="form-control" type="text" placeholder="输入gridName"
-                                             ng-model="gridName"></div>
+                <div class="col-md-4">
+                    <input class="form-control" type="text" placeholder="输入gridName"  ng-model="gridName">
+                </div>
                 <div class="col-md-2">
                     <button class="btn btn-primary btn-block margin-bottom"> 查询Grid定义</button>
                 </div>
@@ -46,16 +47,22 @@
                     <label>
                         <input type="checkbox" id="selectCheckBox" ng-model="wz_selectCheckBox">使用勾选框
                     </label>
+                    <label>
+                        <input type="checkbox" id="pageable" ng-model="wz_pageable">分页
+                    </label>
+
+
+
                 </div>
 
                 <div class="form-group">
                     <div class="radio" >
                         <label>
-                            <input type="radio" name="optionsRadios" id="optionsRadios1"  ng-model="wz_selectable" value="multiple row">
+                            <input type="radio"   ng-model="wz_selectable" value="multiple row">
                             多行选择
                         </label>
                         <label>
-                            <input type="radio" name="optionsRadios" id="optionsRadios2"   ng-model="wz_selectable" value="row"  checked="" >
+                            <input type="radio"   ng-model="wz_selectable" value="row"  checked="" >
                              单行选择
                         </label>
                     </div>
@@ -63,25 +70,28 @@
 
 
                 <div class="form-group">
+                    <label for="height">Grid标题</label>
+                    <input type="text" class="form-control" id="title"  ng-model="wz_title" placeholder="Grid的标题">
+
                     <label for="pageSize">pageSize</label>
-                    <input type="text" class="form-control" id="pageSize" placeholder="每页item数量  使用勾选框将会禁用分页">
+                    <input type="text" class="form-control" id="pageSize" ng-model="wz_pageSize" placeholder="每页item数量  使用勾选框将会禁用分页">
 
                     <label for="height">height</label>
-                    <input type="text" class="form-control" id="height" placeholder="高度">
+                    <input type="text" class="form-control" id="height"  ng-model="wz_height" placeholder="高度">
                 </div>
 
                 <div class="checkbox">
                     <label>
-                        <input type="checkbox" id="groupable">分类汇总功能<!--  -->
+                        <input type="checkbox" id="groupable" ng-model="wz_groupable">分类汇总功能<!--  -->
                     </label>
                     <label>
-                        <input type="checkbox" id="sortable">排序
+                        <input type="checkbox" id="sortable" ng-model="wz_sortable">排序
                     </label>
                     <label>
-                        <input type="checkbox" id="reorderable">列拖拽
+                        <input type="checkbox" id="reorderable" ng-model="wz_reorderable">列拖拽
                     </label>
                     <label>
-                        <input type="checkbox" id="resizable">列宽可调
+                        <input type="checkbox" id="resizable" ng-model="wz_resizable">列宽可调
                     </label>
                 </div>
             </div>
