--- a/web/pages/demoGrid/gridMaker_sub3.html
+++ b/web/pages/demoGrid/gridMaker_sub3.html
@@ -1,4 +1,8 @@
 <!-- 在这里写定义  以后就在这里做ui-view -->
-<div>
-    <h2>页面3</h2>
+<div ng-controller="GridMakerSub2Ctrl">
+    <div class="row">
+        <div class="col-md-12">
+            <ng-whh-grid option="globeOption"></ng-whh-grid>
+        </div>
+    </div>
 </div>
