whhGrid.js dataSource不要放到外部的grid option上

--- a/web/pages/demoGrid/gridMaker.html
+++ b/web/pages/demoGrid/gridMaker.html
@@ -10,9 +10,9 @@
                 </div>
                 <div class="box-body no-padding">
                     <ul class="nav nav-pills nav-stacked">
-                        <li><a ui-sref = ".sub1"><i class="fa fa-inbox"></i> 列定义</a></li>
-                        <li><a ui-sref = ".sub2"><i class="fa fa-envelope-o"></i> 对象预览</a></li>
-                        <li><a ui-sref = ".sub3"><i class="fa fa-file-text-o"></i> Grid效果预览</a></li>
+                        <li><a   ng-click="toSub1()"><i class="fa fa-inbox"></i> 列定义</a></li>
+                        <li><a   ng-click="toSub2()"><i class="fa fa-envelope-o"></i> 对象预览</a></li>
+                        <li><a   ng-click="toSub3()"><i class="fa fa-file-text-o"></i> Grid效果预览</a></li>
                     </ul>
                 </div><!-- /.box-body -->
             </div><!-- /. box -->
