--- a/web/pages/demoGrid/gridMaker_sub1.html
+++ b/web/pages/demoGrid/gridMaker_sub1.html
@@ -42,13 +42,13 @@
 
                 <div class="checkbox">
                     <label>
-                        <input type="checkbox" id="editable" ng-model="wz_editable">可编辑
+                        <input type="checkbox" id="editable" ng-model="GridMakerSub1CtrlCache.wz_editable">可编辑
                     </label>
                     <label>
-                        <input type="checkbox" id="selectCheckBox" ng-model="wz_selectCheckBox">使用勾选框
+                        <input type="checkbox" id="selectCheckBox" ng-model="GridMakerSub1CtrlCache.wz_selectCheckBox">使用勾选框
                     </label>
                     <label>
-                        <input type="checkbox" id="pageable" ng-model="wz_pageable">分页
+                        <input type="checkbox" id="pageable" ng-model="GridMakerSub1CtrlCache.wz_pageable">分页
                     </label>
 
 
@@ -58,11 +58,11 @@
                 <div class="form-group">
                     <div class="radio" >
                         <label>
-                            <input type="radio"   ng-model="wz_selectable" value="multiple row">
+                            <input type="radio"   ng-model="GridMakerSub1CtrlCache.wz_selectable" value="multiple row">
                             多行选择
                         </label>
                         <label>
-                            <input type="radio"   ng-model="wz_selectable" value="row"  checked="" >
+                            <input type="radio"   ng-model="GridMakerSub1CtrlCache.wz_selectable" value="row"  checked="" >
                              单行选择
                         </label>
                     </div>
@@ -71,27 +71,27 @@
 
                 <div class="form-group">
                     <label for="height">Grid标题</label>
-                    <input type="text" class="form-control" id="title"  ng-model="wz_title" placeholder="Grid的标题">
+                    <input type="text" class="form-control" id="title"  ng-model="GridMakerSub1CtrlCache.wz_title" placeholder="Grid的标题">
 
                     <label for="pageSize">pageSize</label>
-                    <input type="text" class="form-control" id="pageSize" ng-model="wz_pageSize" placeholder="每页item数量  使用勾选框将会禁用分页">
+                    <input type="text" class="form-control" id="pageSize" ng-model="GridMakerSub1CtrlCache.wz_pageSize" placeholder="每页item数量  使用勾选框将会禁用分页">
 
                     <label for="height">height</label>
-                    <input type="text" class="form-control" id="height"  ng-model="wz_height" placeholder="高度">
+                    <input type="text" class="form-control" id="height"  ng-model="GridMakerSub1CtrlCache.wz_height" placeholder="高度">
                 </div>
 
                 <div class="checkbox">
                     <label>
-                        <input type="checkbox" id="groupable" ng-model="wz_groupable">分类汇总功能<!--  -->
+                        <input type="checkbox" id="groupable" ng-model="GridMakerSub1CtrlCache.wz_groupable">分类汇总功能<!--  -->
                     </label>
                     <label>
-                        <input type="checkbox" id="sortable" ng-model="wz_sortable">排序
+                        <input type="checkbox" id="sortable" ng-model="GridMakerSub1CtrlCache.wz_sortable">排序
                     </label>
                     <label>
-                        <input type="checkbox" id="reorderable" ng-model="wz_reorderable">列拖拽
+                        <input type="checkbox" id="reorderable" ng-model="GridMakerSub1CtrlCache.wz_reorderable">列拖拽
                     </label>
                     <label>
-                        <input type="checkbox" id="resizable" ng-model="wz_resizable">列宽可调
+                        <input type="checkbox" id="resizable" ng-model="GridMakerSub1CtrlCache.wz_resizable">列宽可调
                     </label>
                 </div>
             </div>
