--- a/web/pages/demoGrid/gridMaker_ColDetail_Date.html
+++ b/web/pages/demoGrid/gridMaker_ColDetail_Date.html
@@ -7,27 +7,51 @@
             <div class="form-group">
                 <div class="checkbox">
                     <label>
-                        <input type="checkbox" ng-model="tempColDef.wz_hidden">不可见  <!--  -->
+                        <input type="checkbox" ng-model="GridMakerColDateCtrlCache.wz_hidden">不可见  <!--  -->
                     </label>
                     <label>
-                        <input type="checkbox" ng-model="tempColDef.wz_editable">不可编辑  <!-- editable -->
+                        <input type="checkbox" ng-model="GridMakerColDateCtrlCache.wz_editable">不可编辑  <!-- editable -->
                     </label>
                     <label>
-                        <input type="checkbox" ng-model="tempColDef.wz_required">必填<!--validation-->
+                        <input type="checkbox" ng-model="GridMakerColDateCtrlCache.wz_required">必填<!--validation-->
                     </label>
                 </div>
             </div>
         </li>
+
+        <li>
+        <div class="form-group">
+            <div class="radio" >
+                <ul><li style="list-style-type:none;">
+                    <label>
+                        <input type="radio"   ng-model="GridMakerColDateCtrlCache.wz_format" value="yyyy-MM-dd">
+                        yyyy-MM-dd
+                    </label>
+                </li><li style="list-style-type:none;">
+                    <label>
+                        <input type="radio"   ng-model="GridMakerColDateCtrlCache.wz_format" value="yyyy-MM-dd HH:mm:ss"  checked="" >
+                        yyyy-MM-dd HH:mm:ss
+                    </label>
+                </li><li style="list-style-type:none;">
+                    <label>
+                        <input type="radio"   ng-model="GridMakerColDateCtrlCache.wz_format" value="HH:mm:ss"  checked="" >
+                        HH:mm:ss
+                    </label>
+                </li></ul>
+            </div>
+        </div>
+        </li>
+
         <li>
             <div class="form-group">
                 <label for="minDate">最小日期</label>
-                <input class="form-control" id="minDate" ng-whh-date-picker option="MindateOption" ng-model="tempColDefwz_minDate">
+                <input class="form-control" id="minDate" ng-whh-date-picker option="MindateOption" ng-model="GridMakerColDateCtrlCache.wz_minDate">
             </div>
         </li>
         <li>
             <div class="form-group">
                 <label for="maxDate">最大日期</label>
-                <input class="form-control" id="maxDate" ng-whh-date-picker option="MaxdateOption" ng-model="tempColDefwz_maxDate">
+                <input class="form-control" id="maxDate" ng-whh-date-picker option="MaxdateOption" ng-model="GridMakerColDateCtrlCache.wz_maxDate">
 
             </div>
         </li>
@@ -35,7 +59,7 @@
         <li>
             <div class="form-group">
                 <label for="colWidth">宽度</label>
-                <input type="text" class="form-control" id="colWidth" placeholder="宽度" ng-model="tempColDef.wz_width">
+                <input type="text" class="form-control" id="colWidth" placeholder="宽度" ng-model="GridMakerColDateCtrlCache.wz_width">
             </div>
         </li>
 
