grid构建工具，各种editor的配置保存 数据库保存

--- a/web/index.html
+++ b/web/index.html
@@ -8,7 +8,7 @@
 
 
     <link rel="stylesheet" href="framwork/AdminLTE-2.3.0/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="framwork/Font-Awesome-3.2.1/css/font-awesome.min.css">
     <link rel="stylesheet" href="framwork/ionicons-2.0.1/css/ionicons.min.css">
     <link rel="stylesheet" href="framwork/AdminLTE-2.3.0/dist/css/AdminLTE.min.css">
     <link rel="stylesheet" href="framwork/AdminLTE-2.3.0/dist/css/skins/_all-skins.min.css">
@@ -127,7 +127,7 @@
 <!-- jQuery 2.1.4 -->
 <script src="framwork/AdminLTE-2.3.0/plugins/jQuery/jQuery-2.1.4.min.js"></script>
 <!-- jQuery UI 1.11.4 -->
-<script src="https://code.jquery.com/ui/1.11.4/jquery-ui.min.js"></script>
+<script src="framwork/AdminLTE-2.3.0/plugins/jQueryUI/jquery-ui.min.js"></script>
 <script src="framwork/jquery.blockUI.js"></script>
 <!-- Resolve conflict in jQuery UI tooltip with Bootstrap tooltip -->
 <script>
