--- a/web/pages/demoGrid/gridMaker_sub2.html
+++ b/web/pages/demoGrid/gridMaker_sub2.html
@@ -1,3 +1,8 @@
-<div>
-    <h2>页面2</h2>
+<div ng-controller="GridMakerSub2Ctrl">
+    <div class="form-group">
+        <label>GridOption对象</label>
+        <textarea class="form-control" rows="50" placeholder="Enter ..." disabled="" style="margin: 0px -0.5px 0px 0px; height: 600px; width: 100%;">
+            {{jsonStr}}
+        </textarea>
+    </div>
 </div>
