--- a/web/index.html
+++ b/web/index.html
@@ -157,6 +157,7 @@
 
 <!-- 封装的UI控件的js-->
 <script src="framwork/whhJsFrame/js/settings.js"></script>
+<script src="framwork/whhJsFrame/widgets/ItemObject.js"></script>
 <script src="framwork/whhJsFrame/widgets/whhGrid.js"></script>
 <script src="framwork/whhJsFrame/widgets/whhDatePicker.js"></script>
 <script src="framwork/whhJsFrame/widgets/whhComboBox.js"></script>
