--- a/web/pages/demoGrid/gridMaker_sub1.html
+++ b/web/pages/demoGrid/gridMaker_sub1.html
@@ -13,10 +13,13 @@
                     <button class="btn btn-danger btn-block" ng-click="deleteSelectedItems()"> 删除列</button>
                 </div>
                 <div class="col-md-2">
-                    <button class="btn btn-info btn-block" ng-click="showOption()"> 上移</button>
+                    <button class="btn btn-info btn-block" ng-click="toUp()"> 上移</button>
                 </div>
                 <div class="col-md-2">
-                    <button class="btn btn-info btn-block" ng-click="showOption()"> 下移</button>
+                    <button class="btn btn-info btn-block" ng-click="toDown()"> 下移</button>
+                </div>
+                <div class="col-md-2">
+                    <button class="btn btn-info btn-block" ng-click="getSelectItem()"> getSelectItem</button>
                 </div>
             </div>
         </li>
