展示gridoption的代码编辑器的美化 主体 语言类型等等

--- a/web/index.html
+++ b/web/index.html
@@ -8,7 +8,8 @@
 
 
     <link rel="stylesheet" href="framwork/AdminLTE-2.3.0/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="framwork/Font-Awesome-3.2.1/css/font-awesome.min.css">
+    <!-- <link rel="stylesheet" href="framwork/Font-Awesome-3.2.1/css/font-awesome.css"> -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="framwork/ionicons-2.0.1/css/ionicons.min.css">
     <link rel="stylesheet" href="framwork/AdminLTE-2.3.0/dist/css/AdminLTE.min.css">
     <link rel="stylesheet" href="framwork/AdminLTE-2.3.0/dist/css/skins/_all-skins.min.css">
