--- a/web/pages/demoGrid/gridMaker.html
+++ b/web/pages/demoGrid/gridMaker.html
@@ -8,7 +8,7 @@
                     <a  class="btn btn-success btn-block {{QueryDisable}}" ng-click="queryGridDef()">查询</a>
                     <a  class="btn btn-warning btn-block {{NewDisable}}" ng-click="createGridDef()" >新建</a>
                     <a  class="btn btn-primary btn-block {{SaveDisable}}" ng-click="saveGridDef()" >保存</a>
-                    <a  class="btn btn-info btn-block disabled" ng>另存</a>
+                    <a  class="btn btn-info btn-block {{newSaveDisable}}" ng>另存</a>
                 </div>
             </div>
             <div class="box box-solid">
