--- a/web/framwork/whhJsFrame/gridMaker/gridMaker_sub1.html
+++ b/web/framwork/whhJsFrame/gridMaker/gridMaker_sub1.html
@@ -7,10 +7,10 @@
 
             <div class="row" style="padding-left: 0px;">
                 <div class="col-md-2">
-                    <button class="btn btn-danger btn-block" ng-click="addItem()"> 新增列</button>
+                    <a class="btn btn-danger btn-block {{addItemDisable}}" ng-click="addItem()"> 新增列</a>
                 </div>
                 <div class="col-md-2">
-                    <button class="btn btn-danger btn-block" ng-click="deleteSelectedItems()"> 删除列</button>
+                    <a class="btn btn-danger btn-block {{deleteSelectedItemsDisable}}" ng-click="deleteSelectedItems()"> 删除列</a>
                 </div>
                 <div class="col-md-2">
                     <button class="btn btn-info btn-block" ng-click="toUp()"> 上移</button>
